Bug 282587 - Ask for confirmation when clearing a track
Summary: Ask for confirmation when clearing a track
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 22:39 UTC by Bernhard Beschow
Modified: 2011-09-22 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-22 22:39:42 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When clearing a track, Marble should ask for confirmation. It can just happen too easily that a track is cleared by accident.

Reproducible: Didn't try

Steps to Reproduce:
Hit "Celar track" button.

Actual Results:  
Marble just clears the track w/o asking for confirmation.

Expected Results:  
Marble should ask for confirmation and clear the track only if the user confirms.
Comment 1 Bernhard Beschow 2011-09-22 22:54:42 UTC
Git commit cebc1629274fd8aa8d462d4417130b9c2af68a78 by Bernhard Beschow.
Committed on 22/09/2011 at 23:05.
Pushed by beschow into branch 'master'.

CurrentLocationWidget: ask for confirmation when clearing all tracking data

* helps prevent clearing all tracking data by accident

BUG: 282587

M  +13   -4    src/lib/CurrentLocationWidget.cpp

http://commits.kde.org/marble/cebc1629274fd8aa8d462d4417130b9c2af68a78