CurrentLocationWidget: ask for confirmation when clearing all tracking data

* helps prevent clearing all tracking data by accident

BUG: 282587